--- a/index.html
+++ b/index.html
@@ -51,9 +51,99 @@
     </section>
     <section id="Inspiration">
     <h1>Inspiration</h1>
-        <div class="line">
-        
+        <div class="line"></div>
+       <p>Coding is one of the most sought-after skills in the 4th Industrial Revolution as more technologies need to be developed to meet the demand. This gives aspiring coders a shot at having it big in this career path as they learn how to develop and code the most complex software systems. 
+
+
+Hollywood movies have made it seem like all coders can hack and break into systems, well that’s not entirely true. The cornerstone of a coder also known as a programmer or software developer is creating software for various applications. 
+
+An entry-level coder can create a website from scratch with no online tools that work on the drag and drop function or other tools that make it easy for you.
+
+It is a great course of study with a fruitful career and it also has many benefits. One of the biggest benefits is that even if you don’t end up in software development, you won’t need to outsource your website development needs if you have a business. Nothing better than being an in-house programmer! 
+
+Here are three success stories of how people from humble beginnings made it big in the programming industry.
+        Alvaro Videla comes from a very humble background with his wife being the main source of income, which was less than their expenses, $1 920 per year. He tells his story that he started selling some food items door-to-door to make ends meet, but he still couldn’t make enough and had to settle for $20 a week, excluding expenses. 
+
+
+All of this happened while they were living at his wife’s aunt, where they constantly felt like their overstaying their welcome. He later on than met his friend who was at a university in Montevideo who introduced programming to him. He told Alvaro that there are many job opportunities in the cities and told him about a company called Live Interactive.
+
+That company hired computer programmers every now and then and when the job recommendation came through, Alvaro knew nothing about programming. He hadn’t gone to college or university to study IT or anything related to computers, but he did have a love for them and could use them independently. 
+
+The salary of Live Interactive was three times than what they currently made, which would have made a great difference in their lives. He then took a liking for programming and considered it as an industry with a lot of growth potential. However, he faced certain problems in his journey and most of them were caused by a lack of resources in his area of residence.
+
+Alvaro didn’t have any internet access; he didn’t have a way to connect with mentors and also didn’t have courseware to learn to program. However, he found a way to work around the problem and find a solution to the problem he was facing. He says that at first, programming reminded him of how a friend introduced computers by showing him that they could be programmed and instructed to carry out functions. 
+
+So, he had that base and above that, he knew the basics of PHP programming and ActionScript for Flash MX. He then came up with a plan of action of designing a project that would help him gain experience as a programmer and prove his worth in this industry. So, how the map application directed Alvaro to his career path?
+
+He undertook a personal project that would boost his resume of a map of his town that functioned pretty much like the Google Maps we see today. In the conception of Cyber Cafes in his area, he jumped at the opportunity and used it to his own advantage. 
+
+He researched the internet, copied the information he wanted in a floppy disk and used it on his computer at home. He carried on giving his best effort to learn how to code and eventually was ready for the job application and that’s when his career took off to where he is now.
+
+If you also have similar plans and want to see yourself rank among the best, act smart by utilizing the time in best manner. If you lack time during your university or college days, read academized reviews that recommend sites like My assignment help for getting your college essays, thesis, dissertation and term papers with the help of online writing professionals. 
+
+Gwendolyn Faraday
+Gwendolyn who used to be a restaurant manager by profession and later a saleswoman who also took care of her grandmother is now a successful website developer. She has no degree in software programming and all she had in her background were failed attempts at learning how to program. 
+
+
+She used to blame it on her busy schedule and her failure to commit to one course of study at a time. She then took a bold decision of quitting her day job and pursuing computer programming full time. 
+
+She then chose the tools she was going to use in her career to program and she came up with three languages. She committed to learning and mastering HTML, CSS and basic JavaScript.
+
+She then used the online free resource called Free Code Camp, where she started dedicating hours each day to learn how to program. Because of her background with attempts of learning how to code, she aced the first part of the curriculum that is based on front end development and went through the five projects with ease. 
+
+When she moved on to advanced JavaScript concepts, that’s when she started feeling accomplished. Gwendolyn’s curriculum then pointed her towards learning backend solutions for programming apps, databases, etc. She says she has been able to complete one full stack project, which involves both the front-end and backend.
+
+She has already found a job as a website developer even though she hasn’t completed her course with Free Code Camp.
+
+Gwendolyn says that landing this job has helped her very much because she can now learn on the job and see how everything fits together. She has enjoyed being in a couple of conferences where she describes herself as nervous when she had to introduce herself to people.
+
+Her progress in this industry, especially considering the time where she started off, is highly impressive. It is also thrilling to see more women join this male-dominated industry and continue proving themselves.
+
+Ken Rogers
+Ken Rogers, who was a college dropout a few years ago due to financial constraints and was without any direction in his life, was bouncing between various jobs. He then started teaching himself software developing as a hobby and nothing else more. 
+
+
+However, after a while, he recognized that he could actually make a living out of this. So, it was time to put his mind to it. Ken didn’t want to go down the route of burdening himself with tuition loans that would take forever to pay off. 
+
+He then subsequently started teaching himself again, but this time, he had the intention of landing an internship. He believed that if he got that internship, he would be able to pay off his education.
+
+This way, he was able to gain more experience in the industry, and he was set to find an opportunity to get a real job. He then started building his portfolio and improving the resume by completing practical projects and posting them on GitHub. 
+
+The apps he made were just to prove that he can code and that he will be able to cope in this industry. He then got his first job, which wasn’t an internship as he had planned, but he got full-time employed as a Junior Developer. 
+
+He views himself as an apprentice still because of the new things he is learning every day. Ken also thanks for the experience he got working in the professional world.
+
+He says that the experience helped him a lot in understanding programming from a professional perspective and working with colleagues. He also learned how to work with deadlines and other invaluable skills he learned. 
+
+He emphasized the importance of flipping your hobby learning to an actual fruitful career, as he has done. The key characteristics he outlined that you should have to follow his path is to be determined, having the drive and stubborn persistence. He set a great example that young people, and even older ones if they are capable, should follow.
+
+Conclusion
+If you think that software programming is a great career path, you are most certainly correct. Almost everyone on this planet is reliant on applications, from food procession machinery software to digital social media. Learning how to develop these technologies isn’t just the street credit or being considered smart, but it a very valuable skill that you should master. As you recognized, it’s also important to try and make a career out of it.
+
+</p>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/zE9GU41nM_k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/eiUgVa2Td_k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/M87jSCFOgZQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+    <section id="contact">
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15078.353856082635!2d72.8906491!3d19.1257017!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xacf72f56793d190a!2sWHITEHAT%20EDUCATION%20TECHNOLOGY%20PVT%20LTD!5e0!3m2!1sen!2sin!4v1573468987088!5m2!1sen!2sin" height="450" frameborder="0" allowfullscreen=""></iframe>
+
+        <div class="contact_1">
+
+           <a href="mailto:someone@example.com?Subject=Hello">
+               <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>mygmailid@gmail.com</h3>
+            </a>
+           
+           <br>
+           <br>
+
+           <a href="#">
+               <i class="fa fa-instagram" ></i>&nbsp;&nbsp;<h3>myinstagramid</h3>
+            </a>
+
         </div>
+
     </section>
 </body>
 
